--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -19,8 +19,26 @@
     var connection
         = new signalR.HubConnectionBuilder()
             .withUrl('/messages')
+
+            //manual strategy
+            //.withAutomaticReconnect({
+            //    nextRetryDelayInMilliseconds: retryContext => {
+            //        if (retryContext.elapsedMilliseconds < 60000) {
+            //            // If we've been reconnecting for less than 60 seconds so far,
+            //            // wait between 0 and 10 seconds before the next reconnect attempt.
+            //            return Math.random() * 10000;
+            //        } else {
+            //            // If we've been reconnecting for more than 60 seconds so far, stop reconnecting.
+            //            return null;
+            //        }
+            //    }
+            //})
+
+            //Automatic strategy
+            //.withAutomaticReconnect([0, 2000, 10000, 30000]);   //  this is default
+
             .build()
-            .withAutomaticReconnect([0, 2000, 10000, 30000]);   //  this is default
+            
 
     connection.on('ReceiveMessage', function (id, message, timestamp) {
         console.log('Message received', id, message, timestamp);
